--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,14 @@
     tools:context="id.sch.smktelkom_mlg.learn.intent2.MainActivity">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/textViewBiodata"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="Biodata belum ada" />
+
+    <Button
+        android:id="@+id/buttonInput"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Isi Biodata" />
 </LinearLayout>
